@@ -1,9 +1,7 @@
 package com.dpm.winwin.api.post.dto.response;
 
 import com.dpm.winwin.domain.entity.post.Post;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record PostAddResponse(
         long id,
@@ -32,7 +30,7 @@ public record PostAddResponse(
                 savePost.getSubCategory().getName(),
                 savePost.getLinks().stream()
                         .map(LinkResponse::of)
-                        .collect(Collectors.toList()),
+                        .toList(),
                 savePost.getChatLink(),
                 savePost.getTakenTalents().stream()
                         .map(t -> t.getTalent().getName())
